# aether

./: .gitignore  Cargo.toml  README.MD  README.md  mods.dot
.cargo/: config.toml
.github/workflows/: rust.yml
crates/aether/: Cargo.toml
crates/aether/benches/: precision.rs  throughput.rs
crates/aether/src/: lib.rs
crates/aether_benchmark/: Cargo.toml
crates/aether_benchmark/src/performance/: clock.rs
crates/aether_benchmark/src/performance/tests/: mod.rs
crates/aether_catalogs/: Cargo.toml  LICENSE.txt  README.md  build.rs
crates/aether_catalogs/docs/: README.md  gnc_field_mapping.md
crates/aether_catalogs/docs/wmm/: README.md  analyze_declination_delta.py  plot_wmm_csv.py
crates/aether_catalogs/examples/: wmm_grid_csv.rs
crates/aether_catalogs/src/: color.rs  lib.rs
crates/aether_catalogs/src/star_catalogs/: mod.rs
crates/aether_catalogs/src/wmm/: mod.rs  wmm_generated.rs
crates/aether_catalogs/tests/: verify_sha.rs
crates/aether_core/: Cargo.toml  mods.dot
crates/aether_core/src/: lib.rs  main.rs
crates/aether_core/src/attitude/: dcm.rs  determination.rs  euler.rs  mod.rs  quaternion.rs  rotation.rs
crates/aether_core/src/attitude/tests/: dcm_tests.rs  euler_tests.rs  quaternion_tests.rs  test_utils.rs
crates/aether_core/src/coordinate/: cartesian.rs  cylindrical.rs  mod.rs  spherical.rs
crates/aether_core/src/coordinate/tests/: mod.rs
crates/aether_core/src/math/: algorithms.rs  complex.rs  macros.rs  matrix.rs  mod.rs  tensor.rs  vector.rs
crates/aether_core/src/math/arch/: mod.rs
crates/aether_core/src/math/arch/arm/: m33_dsp.rs  mod.rs  neon.rs
crates/aether_core/src/math/arch/tests/: matrix_simd_arm.rs  matrix_simd_x86.rs  mod.rs  neon.rs  precision.rs  x86.rs
crates/aether_core/src/math/arch/x86/: matrix_simd.rs  vector_simd.rs
crates/aether_core/src/math/tests/: matrix.rs  mod.rs  vector.rs
crates/aether_core/src/numerical_methods/: mod.rs
crates/aether_core/src/numerical_methods/integration/: euler.rs  rk4.rs  trapezoidal.rs
crates/aether_core/src/numerical_methods/solvers/: lu.rs  mod.rs  newton.rs  spd.rs
crates/aether_core/src/numerical_methods/solvers/tests/: mod.rs
crates/aether_core/src/real/: fpx_impl.rs  no_std_impl.rs  real.rs  std_impl.rs
crates/aether_core/src/reference_frame/: asm.rs  body.rs  icrf.rs  itrf.rs  ned.rs  pose.rs  traits.rs  transforms.rs
crates/aether_core/src/utils/: angle_conversion.rs  interpolation.rs  mod.rs
crates/aether_examples/: Cargo.toml
crates/aether_examples/src/: coordinates.rs  example_matrix.rs  matrix.rs
crates/aether_fft/: Cargo.toml
crates/aether_fft/src/: fft.rs  lib.rs  spectral.rs
crates/aether_fluids/: Cargo.toml
crates/aether_fluids/src/: lib.rs
crates/aether_fluids/src/isentropic/: mod.rs
crates/aether_fluids/src/tanks/: mod.rs
crates/aether_graphics/: Cargo.toml
crates/aether_graphics/src/: lib.rs
crates/aether_graphics/src/cameras/: orbit_camera.rs
crates/aether_graphics/src/graphics/: transforms.rs
crates/aether_interp/: Cargo.toml
crates/aether_interp/src/: lerp.rs  lib.rs  polynomial.rs  spline.rs
crates/aether_ml/: Cargo.toml
crates/aether_ml/docs/: architecture.plantuml
crates/aether_ml/src/classification/: lda_qda.rs  naive_bayes.rs  perceptron.rs  svm.rs
crates/aether_ml/src/regression/: linear.rs  logistic.rs  ridge.rs
crates/aether_models/: Cargo.toml
crates/aether_models/src/: lib.rs
crates/aether_models/src/lunar/: constants.rs  frames.rs  mod.rs  moon.rs  orbit.rs  transforms.rs
crates/aether_models/src/models/: mod.rs
crates/aether_models/src/terrestrial/: earth.rs
crates/aether_nist/: Cargo.toml
crates/aether_nist/src/: lib.rs
crates/aether_nist/src/physical/: allascii.txt  constants.rs  generated.rs  mod.rs
crates/aether_nist/tools/: generate_nist_constants.rs
crates/aether_opt/: Cargo.toml
crates/aether_opt/src/gradient_descent/: basic.rs  mod.rs  stochastic.rs  stochastic_parallel.rs
crates/aether_opt/src/gradient_descent/tests/: basic.rs  stochastic.rs  stochastic_parallel.rs
crates/aether_rand/: Cargo.toml
crates/aether_rand/src/: lib.rs
crates/aether_rand/src/randomizers/: mod.rs  xor_shift.rs
crates/aether_shapes/: Cargo.toml
crates/aether_shapes/src/: attributes.rs  cylinder.rs  lib.rs  prism.rs  sphere.rs
crates/aether_shapes/src/tests/: mod.rs
crates/aether_stats/: Cargo.toml
crates/aether_stats/distributions/: bernoulli.rs
crates/aether_stats/examples/: noise_plots.rs
crates/aether_stats/src/: covariance.rs  lib.rs
crates/aether_stats/src/distributions/: bernoulli.rs  categorical.rs  gauss_markov.rs  gaussian.rs  mod.rs  multivariate.rs  random_walk.rs  white_noise.rs
crates/aether_test/: Cargo.toml
crates/aether_test/src/assert/: coding.rs  function.rs  matrix.rs  mod.rs  scalar.rs  vector.rs
crates/aether_test/src/assert/tests/: coding.rs  matrix.rs  mod.rs  vector.rs
crates/aether_time/: Cargo.toml
crates/aether_time/crates/aether_benchmark/: Cargo.toml
crates/aether_time/scripts/: animate_cartpole.py  pipeline.sh  plot_mpc_trajectory.py  plot_q_guidance.py
crates/aether_units/: Cargo.toml
crates/aether_units/src/: lib.rs
crates/aether_viz/: Cargo.toml
crates/aether_viz/examples/: correlation_linear_regression.rs
crates/aether_viz/src/: lib.rs  realtime.rs
scripts/: criterion_ratio.py
src/: lib.rs
src/attitude/: dcm.rs  determination.rs  euler.rs  mod.rs  quaternion.rs  rotation.rs
src/attitude/tests/: dcm_tests.rs  euler_tests.rs  quaternion_tests.rs  test_utils.rs
src/coordinate/: cartesian.rs
src/coordinate/tests/: mod.rs
src/graphics/: mod.rs  orbit_camera.rs  transforms.rs
src/math/: matrix.rs  vector.rs
src/math/tests/: matrix.rs
src/models/: mod.rs
src/models/celestial/: constants.rs
src/models/earth/: earth.rs  mod.rs
src/models/terrestial/: earth.rs  mod.rs
src/numerical_methods/integration/: rk4.rs  trapezoidal.rs
src/reference_frame/: body.rs  icrf.rs  itrf.rs  mod.rs  ned.rs  rotations.rs  traits.rs  transforms.rs  unknown.rs
src/utils/: angle_conversion.rs
(+132 files in other folders)
