[workspace]
resolver = "2"
members = [
    "crates/aether",
    "crates/aether_benchmark",
    "crates/aether_core", 
    "crates/aether_examples", 
    "crates/aether_fluids",
    "crates/aether_graphics",
    "crates/aether_ml",
    "crates/aether_models",
    "crates/aether_opt",
    "crates/aether_rand",
    "crates/aether_shapes",
    "crates/aether_stats", 
    "crates/aether_test", 
    "crates/aether_time",
    "crates/aether_units", 
    "crates/aether_viz"
]
exclude = []

[workspace.package]
edition = "2021"
license-file = "LICENSE.txt"
rust-version = "1.88"
version = "0.1.1"

[workspace.dependencies]
approx = "0.5"
bincode = "2.0.1"
criterion = "0.5"
csv = "*"
libm = "0.2"
minstant = "0.1.7"
nalgebra = "0.33"
num-traits = "0.2"
once_cell = "1"
plotters = "0.3.7"
regex = "1"
rustyline = "13"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[workspace.lints.rust]
# Make warnings fail in CI without breaking local dev:
unused = "warn"
unused_imports = "warn"
missing_docs = "allow"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"

[profile.release]
# opt-level = 0     # no optimizations
# opt-level = 1     # basic optimizations
# opt-level = 2     # some optimizations
opt-level = 3       # all optimizations
# opt-level = "s"   # optimize for binary size
# opt-level = "z"   # optimize for binary size, but also turn off loop vectorization
# debug = true      # include debug symbols
panic = "abort"     # Results in smaller code size
lto = "fat"         # enable for max performance
codegen-units = 1   # best runtime performance, slower compilation

[profile.bench]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
# split-debuginfo = "unpacked"
# opt-level = 1
panic = "abort"

[profile.dev.package."*"]
# Optimize all dependencies even in debug builds
opt-level = 2