[package]
name = "aether"
edition.workspace = true
version.workspace = true
license-file.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
aether_core = { path = "../aether_core" }
aether_benchmark = { path = "../aether_benchmark" }
aether_examples = { path = "../aether_examples" }
aether_fluids = { path = "../aether_fluids" }
aether_graphics = { path = "../aether_graphics" }
aether_ml = { path = "../aether_ml" }
aether_models = { path = "../aether_models" }
aether_opt = { path = "../aether_opt" }
aether_rand = { path = "../aether_rand" }
aether_shapes = { path = "../aether_shapes" }
aether_stats = { path = "../aether_stats" }

[features]
default = []
# Pass-through commonly used features to the subcrates
serde = ["aether_core/serde"]
bincode = ["aether_core/bincode"]
std = [
    "aether_core/std",
    "aether_benchmark/std",
    "aether_fluids/std",
    "aether_graphics/std",
    "aether_ml/std",
    "aether_models/std",
    "aether_opt/std",
    "aether_rand/std",
    "aether_shapes/std",
    "aether_stats/std",
]
no_std = [
    "aether_core/no_std",
    "aether_benchmark/no_std",
    "aether_fluids/no_std",
    "aether_graphics/no_std",
    "aether_ml/no_std",
    "aether_models/no_std",
    "aether_opt/no_std",
    "aether_rand/no_std",
    "aether_shapes/no_std",
    "aether_stats/no_std",
]
regex = ["aether_core/regex"]
rustyline = ["aether_core/rustyline"]
serde-json-core = ["aether_core/serde-json-core"]

[dev-dependencies]
criterion = "0.5"
nalgebra = "0.33"

[[bench]]
name = "throughput"
harness = false
