[package]
name = "aether_benchmark"
edition.workspace = true
version.workspace = true
license-file.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["no_std"]
std = []
no_std = []

[dependencies]
minstant = { workspace = true }
once_cell = { workspace = true }
