[package]
name = "aether_catalogs"
version = "0.1.0"
edition = "2024"

[features]
default = ["no_std"]
std = [
	"aether_core/std",
	"aether_models/std",
	"dep:serde",
	"dep:csv",
	"dep:rkyv",
	"dep:rand",
	"dep:sha2",
]
no_std = ["aether_core/no_std", "aether_models/no_std"]
world-magnetic-model = []
download-gnc-catalog = []
download-world-magnetic-model = ["world-magnetic-model"]
download-catalogs = ["download-gnc-catalog", "download-world-magnetic-model"]

[dependencies]
aether_core = { path = "../aether_core" }
aether_models = { path = "../aether_models" }
serde = { version = "1", features = ["derive"], optional = true }
csv = { version = "1", optional = true }
rkyv = { version = "*", optional = true }
rand = { version = "0.9.2", optional = true }
sha2 = { version = "0.10", optional = true }

[[example]]
name = "wmm_grid_csv"
required-features = ["std", "world-magnetic-model"]