[package]
name = "aether_examples"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[[bin]]
name = "matrix"
path = "src/matrix.rs"

[[bin]]
name = "coordinates"
path = "src/coordinates.rs"

[dependencies]
aether_core = {path = "../aether_core"}
