[package]
name = "aether_graphics"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[lib]
crate-type = ["rlib"]

[dependencies]
num-traits = "0.2"
aether_core = { path = "../aether_core" }
