[package]
name = "aether_ml"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[dependencies]
aether_opt = {path = "../aether_opt"}
aether_core = { path = "../aether_core" }
minstant = {version = "0.1.7"}
once_cell = {version = "1.0"}
num-traits = {version = "*"}
csv = {version = "*"}
serde = {version = "1.0", features = ["derive"]}

[target.'cfg(feature = "std")'.dependencies]
