[package]
name = "aether_ml"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[dependencies]
aether_opt = {path = "../aether_opt"}
aether_core = { path = "../aether_core" }
minstant = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }

[target.'cfg(feature = "std")'.dependencies]
