[package]
name = "aether_opt"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[lib]
crate-type = ["rlib"]

[dependencies]
aether_core = { path = "../aether_core" }
aether_rand = { path = "../aether_rand" }
num-traits = "0.2"