[package]
name = "aether_shapes"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[dependencies]
aether_core = {path = "../aether_core"}
num-traits = { workspace = true }

[lints]
workspace = true
