[package]
name = "aether_stats"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = []
no_std = []

[lib]
crate-type = ["rlib"]

[dependencies]
num-traits = { workspace = true }
aether_core = {path = "../aether_core"}
aether_rand = {path = "../aether_rand"}
aether_opt =  {path = "../aether_opt"}