[package]
name = "aether_stats"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true

[features]
default = ["no_std"]
std = ["dep:aether_opt"]
no_std = []

[lib]
crate-type = ["rlib"]

[dependencies]
aether_core = {path = "../aether_core"}
aether_rand = {path = "../aether_rand"}
aether_opt =  {path = "../aether_opt", optional = true}

[dev-dependencies]
aether_fft = { path = "../aether_fft", features = ["std"] }
aether_viz = { path = "../aether_viz" }