[package]
name = "aether_viz"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license-file.workspace = true
description = "Plotting helpers for Aether (errors, vectors, heatmaps)."

[dependencies]
plotters = { version = "0.3.7", default-features = true, features = [] }

[features]
svg = ["plotters/svg_backend"]
bitmap = ["plotters/bitmap_backend"]
line_series = ["plotters/line_series"]
default = ["svg", "line_series"]   # or make this empty if you want opt-in

[lib]
name = "aether_viz"
path = "src/lib.rs"
